-
Bug
-
Resolution: Done
-
P1: Critical
-
4.7.3
-
C7 + 92_201107_02 Subcon (020.036) + Split view SHA 985ab91a31c6577146b72d1cd0a69fb9c4ff9977
-
7a94ad38f0d730689ff3ed973b5824e5d7ab6408
Preconditions:
Maximized QML application includes TextEdit elements.
View is on portrait orientation. One TextElement position is outside the split view screen area.
Tested with 'QMLTextEditTest' application:
- tap 'change box height' after test application opened
--> 'First input' field is higher than 'Second Input' field (i.e. 'Second Input' field is positioned outside the split view screen area)
Test steps:
1. Tap the 'Second Input' field that is positioned outside the split view screen area.
Expected result:
Split view is opened and text input field is visible on split view screen area.
Actual result:
Split view is opened but text input field is visible on split view screen area.
- relates to
-
QTBUG-16572 Support partial input mode
-
- Closed
-